--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
       <a href="">Womens</a>
       <a href="">Kids</a>
      </div>
-     <input class="input" type="text" name="" value="" placeholder="Search for products,brand and more">
+     <input class="in" type="text" name="" value="" placeholder="Search for products,brand and more">
 
     <div class="sign">
-      <a href="#"><button type="button" class="btn btn-outline-light">Login</button></a>
+      <a href="signup.html"><button type="button" class="btn btn-outline-light">Sign up</button></a>
      </div>
      <div class="cart"> 
       <a href="#"><i class=" fa-2x fa fa-shopping-cart" aria-hidden="true"></i></a> 
@@ -56,42 +56,49 @@
     <a href="#"><div class="card" style="width: 18rem;">
       <img src="tshirt-m.jpg" class="card-img-top" alt="...">
       <div class="card-body">
+        <p class="card-text" style="color: black;"><b>t-shirts</b></p>
        <p class="card-text" style="color: black;"><b>₹199-₹699</b></p>
       </div>
     </div></a>
     <a href="#"><div class="card" style="width: 18rem;">
       <img src="jeans-m.jpg" class="card-img-top" alt="...">
       <div class="card-body">
+        <p class="card-text" style="color: black;"><b>Jeans</b></p>
        <p class="card-text" style="color: black;"><b>₹399-₹1099</b></p>
       </div>
     </div></a>
     <a href="#"><div class="card" style="width: 18rem;">
       <img src="shoes-m.jpg" class="card-img-top" alt="...">
       <div class="card-body">
+        <p class="card-text" style="color: black;"><b>Shoes</b></p>
        <p class="card-text" style="color: black;"><b>₹299-₹3999</b></p>
       </div>
     </div></a>
     <a href="#"><div class="card" style="width: 18rem;">
       <img src="watch-m.jpg" class="card-img-top" alt="...">
       <div class="card-body">
+        <p class="card-text" style="color: black;"><b>Watches</b></p>
        <p class="card-text" style="color: black;"><b>₹699-₹2999</b></p>
       </div>
     </div></a>
     <a href="#"><div class="card" style="width: 18rem;">
       <img src="kurta-m.jpg" class="card-img-top" alt="...">
       <div class="card-body">
+        <p class="card-text" style="color: black;"><b>Kurtas</b></p>
        <p class="card-text" style="color: black;"><b>₹499-₹2999</b></p>
       </div>
     </div></a>
     <a href="#"><div class="card" style="width: 18rem;">
       <img src="shoe-m.jpg" class="card-img-top" alt="...">
       <div class="card-body">
+        <p class="card-text" style="color: black;"><b>₹Sport Shoes</b></p>
        <p class="card-text" style="color: black;"><b>₹299-₹4999</b></p>
       </div>
     </div></a>
     <a href="#"><div class="card" style="width: 18rem;">
       <img src="sunglass-m.jpg" class="card-img-top" alt="...">
       <div class="card-body">
+        <p class="card-text" style="color: black;"><b>Sunglasses</b></p>
        <p class="card-text" style="color: black;"><b>₹99-₹999</b></p>
       </div>
     </div></a>
@@ -102,42 +109,49 @@
   <a href="#"><div class="card" style="width: 18rem;">
     <img src="kurti-w.png" class="card-img-top" alt="...">
     <div class="card-body">
+      <p class="card-text" style="color: black;"><b>Kurties</b></p>
      <p class="card-text" style="color: black;"><b>₹250-₹1500</b></p>
     </div>
   </div></a>
   <a href="#"><div class="card" style="width: 18rem;">
     <img src="saree-w.jpg" class="card-img-top" alt="...">
     <div class="card-body">
+      <p class="card-text" style="color: black;"><b>Sarees</b></p>
      <p class="card-text" style="color: black;"><b>₹399-₹2999</b></p>
     </div>
   </div></a>
   <a href="#"><div class="card" style="width: 18rem;">
     <img src="jeans-w.jpg" class="card-img-top" alt="...">
     <div class="card-body">
+      <p class="card-text" style="color: black;"><b>Jeans</b></p>
      <p class="card-text" style="color: black;"><b>₹499-₹3999</b></p>
     </div>
   </div></a>
   <a href="#"><div class="card" style="width: 18rem;">
     <img src="watch-w.jpg" class="card-img-top" alt="...">
     <div class="card-body">
+      <p class="card-text" style="color: black;"><b>Watches</b></p>
      <p class="card-text" style="color: black;"><b>₹250-₹2500</b></p>
     </div>
   </div></a>
   <a href="#"><div class="card" style="width: 18rem;">
     <img src="heels-w.jpg" class="card-img-top" alt="...">
     <div class="card-body">
+      <p class="card-text" style="color: black;"><b>Heels</b></p>
      <p class="card-text" style="color: black;"><b>₹399-₹1499</b></p>
     </div>
   </div></a>
   <a href="#"><div class="card" style="width: 18rem;">
     <img src="lakme-w.jpg" class="card-img-top" alt="...">
     <div class="card-body">
+      <p class="card-text" style="color: black;"><b>Beauty Products</b></p>
      <p class="card-text" style="color: black;"><b>₹99-₹299</b></p>
     </div>
   </div></a>
   <a href="#"><div class="card" style="width: 18rem;">
     <img src="ear-w.jpg" class="card-img-top" alt="...">
     <div class="card-body">
+      <p class="card-text" style="color: black;"><b>Jewellery</b></p>
      <p class="card-text" style="color: black;"><b>₹49-₹499</b></p>
     </div>
   </div></a>
